# PerfTimer-C-

./: .gitignore  CMakeLists.txt  README.md
example/: main.cpp
src/: PerfTimer.cpp  PerfTimer.hpp
